[project]
name = "medicalvecsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling",
    "langchain>=0.3.25",
    "psutil>=7.0.0",
    "pymilvus>=2.5.10",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

# [[tool.uv.index]]
# name = "private-pypi"
# url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
# url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
# url = "https://pypi.example.com/repository/pypi-public/simple"
# default = true

